// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appeal-details GET /:appealId should render a page not found when the appealId is not valid/does not exist 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with multiple linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site Address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default1">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-1"> Case Overview</span></h2>
                </div>
                <div id="accordion-default1-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">household</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">No agent for this appeal</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked Appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link
                                ">725284</a></li><li><a href='/appeals-service/appeal-details/2' class="govuk-link ">123456</a></li></ul></dd><dd class="govuk-summary-list__actions
                                "><a class="govuk-link " href="/appeals-service/appeal-details/1/change/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other Appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link">765413</a>
                                    </li>
                                    <li><a href='/appeals-service/appeal-details/4' class="govuk-link">523467</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">F / General Allocation</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/allocation-details"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA Reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">Not issued yet</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-2"> Site Details</span></h2>
                </div>
                <div id="accordion-default1-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/lpa-questionnaire/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/appellant-case/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">92 Huntsmoor Road, Tadley, RG26 4BX</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/appellant-case/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/lpa-questionnaire/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/site-visit/schedule-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-3"> Case Timetable</span></h2>
                </div>
                <div id="accordion-default1-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/start-date"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire due</dt>
                            <dd class="govuk-summary-list__value">Due date not yet set</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change/lpa-questionnaire-due-date"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default1-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant Case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/1/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA Questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-5"> Case Team</span></h2>
                </div>
                <div id="accordion-default1-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with no linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site Address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default3">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-1"> Case Overview</span></h2>
                </div>
                <div id="accordion-default3-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">household</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">No agent for this appeal</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked Appeals</dt>
                            <dd class="govuk-summary-list__value"><span>No appeals</span>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/linked-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Other Appeals</dt>
                            <dd class="govuk-summary-list__value"><span>No appeals</span>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">F / General Allocation</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/allocation-details"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA Reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">Not issued yet</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-2"> Site Details</span></h2>
                </div>
                <div id="accordion-default3-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/lpa-questionnaire/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/appellant-case/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">92 Huntsmoor Road, Tadley, RG26 4BX</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/appellant-case/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/lpa-questionnaire/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/site-visit/schedule-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-3"> Case Timetable</span></h2>
                </div>
                <div id="accordion-default3-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/start-date"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire due</dt>
                            <dd class="govuk-summary-list__value">Due date not yet set</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/change/lpa-questionnaire-due-date"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default3-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant Case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/3/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA Questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default3-heading-5"> Case Team</span></h2>
                </div>
                <div id="accordion-default3-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default3-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/3/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId with single linked/other appeals 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site Address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default2">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-1"> Case Overview</span></h2>
                </div>
                <div id="accordion-default2-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">household</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">No agent for this appeal</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked Appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link ">725284</a></li></ul></dd><dd class="govuk-summary-list__actions
                                "><a class="govuk-link " href="/appeals-service/appeal-details/2/change/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other Appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link">765413</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">F / General Allocation</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/allocation-details"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA Reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">Not issued yet</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-2"> Site Details</span></h2>
                </div>
                <div id="accordion-default2-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/lpa-questionnaire/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-case/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">92 Huntsmoor Road, Tadley, RG26 4BX</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-case/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/lpa-questionnaire/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/schedule-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-3"> Case Timetable</span></h2>
                </div>
                <div id="accordion-default2-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-3">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Start date</dt>
                            <dd class="govuk-summary-list__value">23 May 2023</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/start-date"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> LPA Questionnaire due</dt>
                            <dd class="govuk-summary-list__value">Due date not yet set</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/lpa-questionnaire-due-date"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default2-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant Case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA Questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default2-heading-5"> Case Team</span></h2>
                </div>
                <div id="accordion-default2-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default2-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;

exports[`appeal-details GET /:appealId should render the received appeal details for a valid appealId without start date 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div><strong class="govuk-tag govuk-tag--grey single-line govuk-!-margin-bottom-4">received appeal</strong>
    <dl     class="govuk-summary-list govuk-summary-list--no-border">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site Address</dt>
            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Local planning authority</dt>
            <dd             class="govuk-summary-list__value">Wiltshire Council</dd>
        </div>
        </dl>
        <div class="govuk-accordion" data-module="govuk-accordion" id="accordion-default1">
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-1"> Case Overview</span></h2>
                </div>
                <div id="accordion-default1-content-1" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-1">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                            <dd class="govuk-summary-list__value">household</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appeal-type"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Procedure</dt>
                            <dd class="govuk-summary-list__value">Written</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/case-procedure"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appellant name</dt>
                            <dd class="govuk-summary-list__value">Eva Sharma</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Agent name</dt>
                            <dd class="govuk-summary-list__value">No agent for this appeal</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/agent-name"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Linked Appeals</dt>
                            <dd class="govuk-summary-list__value">
                                <ul class="govuk-list"
                                "><li><a href='/appeals-service/appeal-details/1' class="govuk-link
                                ">725284</a></li><li><a href='/appeals-service/appeal-details/2' class="govuk-link ">123456</a></li></ul></dd><dd class="govuk-summary-list__actions
                                "><a class="govuk-link " href="/appeals-service/appeal-details/2/change/linked-appeals
                                "> Change</a></dd></div><div class="govuk-summary-list__row "><dt class="govuk-summary-list__key
                                "> Other Appeals</dt><dd class="govuk-summary-list__value "><ul class="govuk-list "">
                                    <li><a href='/appeals-service/appeal-details/3' class="govuk-link">765413</a>
                                    </li>
                                    <li><a href='/appeals-service/appeal-details/4' class="govuk-link">523467</a>
                                    </li>
                                </ul>
                            </dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/other-appeals"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Allocation details</dt>
                            <dd class="govuk-summary-list__value">F / General Allocation</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/allocation-details"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> LPA Reference</dt>
                            <dd class="govuk-summary-list__value">APP/Q9999/D/21/351062</dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Decision</dt>
                            <dd class="govuk-summary-list__value">Not issued yet</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/decision"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-2"> Site Details</span></h2>
                </div>
                <div id="accordion-default1-content-2" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-2">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/lpa-questionnaire/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector access (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-case/inspector-access/"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Could a neighbouring site be affected?</dt>
                            <dd                             class="govuk-summary-list__value">Yes</dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-is-affected"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 1</dt>
                            <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-address-0"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Neighbour address 2</dt>
                            <dd class="govuk-summary-list__value">92 Huntsmoor Road, Tadley, RG26 4BX</dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/neighbouring-site-address-1"> Change</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (LPA&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>No answer provided</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/appellant-case/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Potential safety risks (Appellant&#39;s answer)</dt>
                            <dd                             class="govuk-summary-list__value"><span>Yes</span>
                                <br><span>Dogs on site</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/change/lpa-questionnaire/health-and-safety"> Change</a>
                                </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Visit type</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/site-visit/schedule-visit"> Change</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-3"> Case Timetable</span></h2>
                </div>
                <div id="accordion-default1-content-3" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-3">
                    <div class="govuk-inset-text">
                        <p class="govuk-body">Case not started</p><a href="/appeals-service/appeal-details/1/appellant-case"
                        class="govuk-link">Review appeal</a>
                    </div>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-4"> Case documentation</span></h2>
                </div>
                <div id="accordion-default1-content-4" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-4">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Documentation</th>
                                <th scope="col" class="govuk-table__header">Status</th>
                                <th scope="col" class="govuk-table__header">Due date</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">Appellant Case</th>
                                <td class="govuk-table__cell">Received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/appellant-case" class="govuk-link">Review</a>
                                </td>
                            </tr>
                            <tr class="govuk-table__row">
                                <th scope="row" class="govuk-table__header">LPA Questionnaire</th>
                                <td class="govuk-table__cell">Not received</td>
                                <td class="govuk-table__cell">23 May 2024</td>
                                <td class="govuk-table__cell"></td>
                            </tr>
                        </tbody>
                    </table>
                </div>
            </div>
            <div class="govuk-accordion__section">
                <div class="govuk-accordion__section-header">
                    <h2 class="govuk-accordion__section-heading"><span class="govuk-accordion__section-button" id="accordion-default1-heading-5"> Case Team</span></h2>
                </div>
                <div id="accordion-default1-content-5" class="govuk-accordion__section-content"
                aria-labelledby="accordion-default1-heading-5">
                    <dl class="govuk-summary-list">
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case Officer</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/case-officer"> Assign</a>
                            </dd>
                        </div>
                        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector</dt>
                            <dd class="govuk-summary-list__value"></dd>
                            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/assign-user/inspector"> Assign</a>
                            </dd>
                        </div>
                    </dl>
                </div>
            </div>
        </div>
</main>"
`;
